--- a/iTerm2.plist
+++ b/iTerm2.plist
@@ -65,7 +65,7 @@
 	<key>CFBundleIconFile</key>
 	<string>iTerm2</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.googlecode.iterm2</string>
+	<string>com.sietecFAST.iterm2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -73,7 +73,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>unknown</string>
+	<string>10.0.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>ITRM</string>
 	<key>CFBundleURLTypes</key>
@@ -176,7 +176,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>unknown</string>
+	<string>10.001</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>NSAppleScriptEnabled</key>
